# trip-planner

./: .env_example  .gitignore  README.md  agents.py  cheatsheet.txt  env-example.txt  main.py  pyproject.toml  tasks.py  todo.txt
cheat_sheets/: agents_cheatsheet.txt  tasks_cheatsheet.txt
tools/: __init__.py  advanced_calc_tool.py  calculator_tool.py  search_tool.py
